Copilot guided bug fixes